<resources>
    <string name="app_name">Task Leaf</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Task Tracker</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="agenda">Agenda</string>
    <string name="current_tasks">Current Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasks_left_to_complete_0">Tasks Left To Complete: 0</string>
    <string name="choose_due_time">Choose due time</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="choose_due_date">Choose due date</string>
    <string name="tasks_left_title">Tasks left to complete: %d</string>
    <string name="add_task">Add task</string>
    <string name="task_title_empty_error">Please enter a task title</string>
    <string name="task_added">Task Added!</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>